# trace-visualizer

./: .gitignore  README.md  pyproject.toml
claude_trace/: __init__.py  callbacks.py  cli.py  config.yaml  server.py
claude_trace/visualizer/: app.js  dag.js  index.html  pricing.js  styles.css
